--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "key-storage": "^1.0.1",
     "vue": "^2.0.1",
     "vue-router": "^2.0.2"
   },
