--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.15.2",
     "key-storage": "^1.0.1",
     "vue": "^2.0.1",
+    "vue-progressbar": "^0.7.0",
     "vue-router": "^2.0.2"
   },
   "devDependencies": {
