--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
     "json-loader": "^0.5.4",
+    "node-sass": "^3.11.2",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "sass-loader": "^4.0.2",
+    "eslint-plugin-promise": "^3.3.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
