--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "deploy": "cd dist && s3-deploy './**' --bucket 'score.lagersoft.com' --profile 'pacifico'"
   },
   "dependencies": {
     "axios": "^0.15.2",
     "key-storage": "^1.0.1",
+    "s3-deploy": "^0.7.3",
     "vue": "^2.0.1",
     "vue-progressbar": "^0.7.0",
     "vue-router": "^2.0.2"
@@ -33,7 +35,7 @@
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
@@ -47,7 +49,6 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "sass-loader": "^4.0.2",
-    "eslint-plugin-promise": "^3.3.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
