--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.15.2",
+    "jwt-decode": "^2.1.0",
     "key-storage": "^1.0.1",
     "s3-deploy": "^0.7.3",
     "vue": "^2.0.1",
